# llmdr

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
src/llmdr/: audit.py  cli.py  config.py  proxy.py
tests/: test_audit.py  test_cli.py  test_config.py  test_proxy.py
